<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <VideoView
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:id="@+id/videoView"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="-2dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fancy="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView android:id="@+id/question"
            android:textColor="#FFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/placeholder"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textIsSelectable="false"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:shadowColor="#ff9100"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="8"
            android:textColor="#cc7e00"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/placeholder"
            android:layout_marginTop="40dp" />

        <LinearLayout
            android:id="@+id/endingContainer"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="60dp" >

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/restart"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="#7ab800"
                fancy:fb_focusColor="#9bd823"
                fancy:fb_fontIconResource="&#xf021;"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/button_restart"
                fancy:fb_textColor="#FFFFFF" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/confirm"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="#3b5998"
                fancy:fb_focusColor="#5474b8"
                fancy:fb_fontIconResource="&#xf05d;"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/button_confirm"
                fancy:fb_textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="60dp" >

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="#b80600"
                fancy:fb_focusColor="#d83e23"
                fancy:fb_fontIconResource="&#xf05c;"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/button_no"
                fancy:fb_textColor="#FFFFFF" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="10dp"
                fancy:fb_textFont="Quando"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="#7ab800"
                fancy:fb_focusColor="#9bd823"
                fancy:fb_fontIconResource="&#xf05d;"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/button_yes"
                fancy:fb_textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>