<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <ca.uqac.keepitcool.menu.revealview.CircularRevealView
        android:id="@+id/reveal"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_gravity="center" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/level_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layoutAnimation="@anim/layout_controller_push_up_in"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/menu_level_01"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:src="@drawable/level_01" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/level_01_name"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:text="@string/menu_level_01"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="-9dp"
                        android:layoutAnimation="@anim/layout_controller_push_up_in">

                        <TextView
                            android:id="@+id/level_01_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/menu_level_01_desc"
                            android:textColor="#000000"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/level_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layoutAnimation="@anim/layout_controller_push_up_in"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/menu_level_02"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:src="@drawable/level_02" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:text="@string/menu_level_02"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:id="@+id/level_02_name" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="-9dp"
                        android:layoutAnimation="@anim/layout_controller_push_up_in">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/menu_level_02_desc"
                            android:textColor="#000000"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:id="@+id/level_02_description" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/level_03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layoutAnimation="@anim/layout_controller_push_up_in"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/menu_level_03"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:src="@drawable/level_03" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:text="@string/menu_level_03"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:id="@+id/level_03_name" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="-9dp"
                        android:layoutAnimation="@anim/layout_controller_push_up_in">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/menu_level_03_desc"
                            android:textColor="#000000"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:id="@+id/level_03_description" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/level_04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layoutAnimation="@anim/layout_controller_push_up_in"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/menu_level_01"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:src="@drawable/level_04" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/level_04_name"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:text="@string/menu_level_01"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="-9dp"
                        android:layoutAnimation="@anim/layout_controller_push_up_in">

                        <TextView
                            android:id="@+id/level_04_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/menu_level_01_desc"
                            android:textColor="#000000"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/level_05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layoutAnimation="@anim/layout_controller_push_up_in"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/menu_level_01"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:src="@drawable/level_05" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/level_05_name"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:text="@string/menu_level_01"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="-9dp"
                        android:layoutAnimation="@anim/layout_controller_push_up_in">

                        <TextView
                            android:id="@+id/level_05_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/menu_level_01_desc"
                            android:textColor="#000000"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>




        </LinearLayout>
    </FrameLayout>
</FrameLayout>

